# EVEMerchantWeb

./: .gitignore  Cargo.toml  Rocket.toml  eve-web.service
src/: eve_requests.rs  main.rs
templates/: authorized.tera
