[package]
name = "eve_merchant_web"
version = "0.1.0"
authors = ["bopohob"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
base64 = "0.12.0"
json = "*"
reqwest = "0.10"
futures = "*"
tokio = { version = "0.2", features = ["full"] }
dotenv = "0.15.0"
time = "0.2.9"
[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["tera_templates"]
